fixed issue with styling of albums and playlist covers on profile page

--- a/react-app/src/components/ConstantUserNav/LibraryBar/UserNav.css
+++ b/react-app/src/components/ConstantUserNav/LibraryBar/UserNav.css
@@ -157,6 +157,10 @@
     padding-left: 10px;
 }
 
+.library-options-buttons-wrapper > button {
+    cursor: pointer;
+}
+
 .library-options-buttons {
     background-color: #232323;
     color: white;
@@ -232,7 +236,6 @@
 @media screen and (max-width: 1200px) {
     .full-user-nav {
         width: 300px;
-        border: 2px solid green;
     }
 
     .library-playlist-info-title {
