--- a/react-app/src/components/UserProfiles/UserProfiles.css
+++ b/react-app/src/components/UserProfiles/UserProfiles.css
@@ -33,10 +33,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 15px;
-    grid-template-rows: 300px;
     cursor: pointer;
     width: 100%;
-    height: 300px;
+    /* min-height: 300px; */
     overflow: hidden;
 }
 
@@ -85,6 +84,7 @@
     border-radius: 5px;
     width: 100%;
     overflow: hidden;
+    padding-bottom: 50px;
 }
 
 .individual-profile-instance-wrappers:hover {
@@ -111,3 +111,10 @@
 .fa-regular.fa-face-sad-cry {
     color: #1ed660;
 }
+
+/* @media screen and (min-width: 1200px) {
+    .user-profile-playlists-wrapper, .user-profile-followers-following-wrapper {
+        grid-template-rows: 600px;
+        border: 1px solid red;
+    }
+} */
